// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout element produces output containing children horizontal 1`] = `
<div
  className="css-1leqdyc-MuiStack-root"
  id="app.page1.things"
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
    id="app.page1.things.text1"
  >
    First text
  </p>
  <p
    className="MuiTypography-root MuiTypography-body1 css-110he2w-MuiTypography-root"
    id="app.page1.things.text2"
  >
    Second text
  </p>
</div>
`;

exports[`Layout element produces output containing children horizontal and wrapped with styles 1`] = `
<div
  className="css-1fu79s8-MuiStack-root"
  id="app.page1.things"
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
    id="app.page1.things.text1"
  >
    First text
  </p>
  <p
    className="MuiTypography-root MuiTypography-body1 css-110he2w-MuiTypography-root"
    id="app.page1.things.text2"
  >
    Second text
  </p>
</div>
`;

exports[`Layout element produces output containing children vertical 1`] = `
<div
  className="css-14r3ihu-MuiStack-root"
  id="app.page1.things"
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
    id="app.page1.things.text1"
  >
    First text
  </p>
  <p
    className="MuiTypography-root MuiTypography-body1 css-110he2w-MuiTypography-root"
    id="app.page1.things.text2"
  >
    Second text
  </p>
</div>
`;
